Перенёс secret_key из констант в флаги. Изменил формат работы с https (и изменил конфиг на запросы по https в клиенте!)

--- a/frontend/cmd/CLI/config.json
+++ b/frontend/cmd/CLI/config.json
@@ -1,4 +1,4 @@
 {
     "db_path": "./data/gophkeeper.db",
-    "server_addr": "http://localhost:8080"
+    "server_addr": "https://localhost:8080"
 }
